Sat Jan  3 14:32:46 2004  Joern Thyssen  <jth@gnubg.org>

	Some updates to EPCs:

	* gnubg.c (EPC): return mu and sigma if requested.
	* gnubg.c (ShowEPC): calculate GWC from mu and sigma.
	* onechequer.c (GWCFromMuSigma, GWCFromDist): new funtions.
	

Sat Jan  3 01:02:49 2004  Joern Thyssen  <jth@gnubg.org>

	* configure.in: look for socklen_t.

Fri Jan  2 19:23:09 2004  Oystein Johansen <oystein@gnubg.org>

        * render.c (RenderDice): Redesign the dice in the 2D board.
	* gtkboard.c (DrawDie): Redesign the dice in the dice selection
	dialog.

Fri Jan  2 12:14:52 2004  Joern Thyssen  <jth@gnubg.org>

	Use one chequer racing formulae from Zadeh & Kobliska, Management
	Science, 1977.

	* onechequer.c (GWCFromPipCount): new function. Delete obsolete
	OneChequer and GetDistFromPipCount.
	(change all callers)

Thu Jan  1 22:59:09 2004  Oystein Johansen <oystein@gnubg.org>

        * external.c: Add som #if USE_SOCKETS to make it compile w/o socket
	support.

Thu Jan  1 20:29:09 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (DisplayAnalysis, DisplayTimeAnalysis): show time analysis
	in cli.
	* gtkgame.c (TimeAnalysis, SetAnnotation): show time analysis
	in gui.
	* analysis.c, import.c: remove debug output
	* format.c (OutputMWCDiff): new function.

Thu Jan  1 18:56:50 2004  Joern Thyssen  <jth@gnubg.org>

	Report equity loss due to "time outs", e.g., when importing
	matches from TMG which ended with "time out".
	[USE_TIMECONTROL]

	TODOs: save in SGF file, text/gtk analysis output

	* analysis.c (AnalyzeMove): analyse time-outs.
	* analysis.c (updateStatContext): calculate equity loss from time-outs.
	* formatgs.c (formatGS): output time-outs.
	* import.c (ParseTMGGame): don't record dice rolls with dice recorded
	as '?'

Thu Jan  1 12:44:52 2004  Joern Thyssen  <jth@gnubg.org>

	Happy New Year to all!

	* gtktoolbar.c (ToolbarUpdate): disable edit button if there
	is no match in progress
	(reported by Misja Alma)
