@@ -1,0 +1,37 @@
+#include "windows.h"
+#include "resource.h"
+
+DLG_MAKEBEAROFF DIALOG 6, 18, 330, 220
+STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+CAPTION "Generating bearoff database"
+FONT 8, "MS Sans Serif"
+BEGIN
+    LTEXT           "String", 101, 12, 26, 113, 12
+    LTEXT           "String", 102, 12, 38, 113, 12
+    LTEXT           "String", 103, 12, 50, 113, 12
+    LTEXT           "String", 104, 12, 62, 113, 12
+    LTEXT           "String", 105, 12, 74, 113, 12
+    LTEXT           "String", 106, 12, 86, 113, 12
+    LTEXT           "String", 107, 12, 98, 113, 12
+    LTEXT           "String", 108, 12, 110, 113, 12
+    LTEXT           "String", 109, 12, 122, 113, 12
+    LTEXT           "String", 110, 12, 134, 113, 12
+    LTEXT           "String", 111, 12, 146, 113, 12
+    LTEXT           "String", 116, 136, 26, 92, 12
+    LTEXT           "String", 117, 136, 38, 92, 12
+    LTEXT           "String", 118, 136, 50, 92, 12
+    LTEXT           "String", 119, 136, 62, 92, 12
+    LTEXT           "String", 120, 136, 74, 92, 12
+    LTEXT           "String", 121, 136, 86, 92, 12
+    LTEXT           "String", 122, 136, 98, 92, 12
+    LTEXT           "String", 123, 136, 110, 92, 12
+    LTEXT           "String", 124, 136, 122, 92, 12
+    LTEXT           "String", 125, 136, 134, 92, 12
+    LTEXT           "String", 126, 136, 146, 92, 12
+    LTEXT           "String", 127, 12, 172, 250, 12
+    LTEXT           "Generating one-sided bearoff database. Please wait.", 
+                    130, 12, 8, 246, 12
+    LTEXT           "Revision", 131, 12, 204, 200, 12
+    PUSHBUTTON      "Cancel", IDCANCEL, 278, 200, 40, 14
+END
+
